P4ADEV-2110 removed ipaCode from getApiKey
